# what-time

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  TIMELINE.md  docker-compose.yml  rust-toolchain.toml
migrations/: 20251020000000_initial_schema.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/web/: assets.rs  mod.rs  routes.rs
web/: .browserslistrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.tsx  styles.css
web/src/components/: TimeGrid.tsx  TimeGridColumn.tsx
web/src/routes/: __root.tsx  index.tsx
web/src/utils/: dateUtils.ts
