[package]
name = "when-works"
version = "0.1.0"
edition = "2021"
default-run = "when-works"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
compile-time = "0.2.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml", "env"] }
fundu = "2.0.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
    "macros",
    "migrate",
] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tower-http = { version = "0.6.0", features = ["fs", "cors", "trace", "timeout"] }
rust-embed = { version = "8.0", features = ["debug-embed", "include-exclude"] }
mime_guess = "2.0"
clap = { version = "4.5", features = ["derive"] }
yansi = "1.0.1"
bcrypt = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.21.3"

[dev-dependencies]

# A 'release mode' profile that compiles quickly, but still 'appears' like a release build, useful for debugging
[profile.dev-release]
inherits = "dev"
debug-assertions = false
